[workspace.package]
name = "opstack-indexer"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/monitor_events", "crates/opstack_ms"]

[workspace.dependencies]
anyhow = "1.0.79"
config = "0.13.1"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
tokio-postgres = "0.7.10"
dotenv = "0.15.0"
eyre = "0.6"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
ethers = { version = "2.0", features = [
    "abigen",
    "rustls",
    "ws",
    "ethers-solc",
    "optimism",
] }
ethers-contract-derive = "2.0.10"
ethers-core = "2.0.10"
ethers-contract = "2.0.10"
ethers-providers = "2.0.10"
