[package]
name = "monitor_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = [
    "abigen",
    "rustls",
    "ws",
    "ethers-solc",
    "optimism",
] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
eyre = "0.6"
ethers-contract-derive = "2.0.10"
ethers-core = "2.0.10"
ethers-contract = "2.0.10"
ethers-providers = "2.0.10"
dotenv = "0.15.0"
tokio-postgres = "0.7.10"
