[package]
name = "optimism-ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
tokio-postgres = "0.7.10"
dotenv = "0.15.0"
eyre = "0.6"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[[bin]]
name = "optimism-ms"
path = "src/main.rs"
