[package]
name = "l2-micro-service"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket.workspace = true
tokio-postgres.workspace = true
dotenv.workspace = true
eyre.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
common.workspace = true
chrono.workspace = true

[[bin]]
name = "l2-micro-service"
path = "src/main.rs"
