[package]
name = "monitor-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers.workspace = true
tokio.workspace = true
eyre.workspace = true
ethers-contract-derive.workspace = true
ethers-core.workspace = true
ethers-contract.workspace = true
ethers-providers.workspace = true
dotenv.workspace = true
tokio-postgres.workspace = true
