[package]
name = "monitor-events"
version = "0.2.1"
edition = "2021"

[dependencies]
ethers.workspace = true
tokio.workspace = true
eyre.workspace = true
ethers-contract-derive.workspace = true
ethers-core.workspace = true
ethers-contract.workspace = true
ethers-providers.workspace = true
dotenv.workspace = true
tokio-postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
common.workspace = true

[[bin]]
name = "monitor-events"
path = "src/main.rs"
