[package]
name = "monitor-events-exex"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth_node_api = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-api" }
reth_exex = { git = "https://github.com/paradigmxyz/reth", package = "reth-exex" }
reth_node_ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum" }
reth_primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
reth_provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" }
reth_tracing = { git = "https://github.com/paradigmxyz/reth", package = "reth-tracing" }
reth = { git = "https://github.com/paradigmxyz/reth", package = "reth" }
futures = "0.3.30"
eyre = "0.6.8"
alloy-sol-types = { version = "0.7.2", features = ["json"] }
primitive-types = "0.12.1"

tokio-postgres.workspace = true
tokio.workspace = true
common.workspace = true
dotenv.workspace = true
