[package]
name = "opstack-ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket.workspace = true
tokio-postgres.workspace = true
dotenv.workspace = true
eyre.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "opstack-ms"
path = "src/main.rs"
